# fullstack_test

./: pyproject.toml
app/: main.py  routes.py
cdk/: app.py  cdk_stack.py
frontend/static/js/: script.js
frontend/templates/: flight_results.html  flights.html  index.html
tests/: test_app.py
