[tool.poetry]
name = "ajaali-fullstack-test"
version = "0.1.0"
description = ""
authors = ["Chintu Yerneni <43496187+Nikesh5888@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
